# df-steam-hook

./: .clang-format  .gitignore  LICENSE.md  README.md  xmake.lua
.github/: dependabot.yml
.github/workflows/: clang-format-check.yml  release.yml  xmake.yml
ci/: hook_version.ps1  package.ps1  release.ps1
config/: dfint_config.toml  dfint_dictionary.csv  kr_regex.txt  temp
config/50.05/: dfint_config.toml
config/not supported versions/: 50.04_steam_win64.toml  50.09_steam_win64.toml
config/offsets/: 50.04_steam_win64.toml  50.05_itchio_win64.toml  50.05_steam_win64.toml  50.07_itchio_win64.toml  50.07_steam_win64.toml  50.08_itchio_win64.toml  50.08_steam_win64.toml  50.09_itchio_win64.toml  50.10_classic_win64.toml  50.10_itchio_win64.toml  50.10_steam_win64.toml  50.11_classic_win64.toml  50.11_itchio_win64.toml  50.11_steam_win64.toml
src/: cache.hpp  config.h  dictionary.cpp  dictionary.h  hooks.cpp  hooks.h  keybindings.h  logger.hpp  main.cpp  offsets.h  pch.h  screen_manager.cpp  screen_manager.h  screen_manager.hpp  sdl_functions.hpp  state_manager.hpp  ttf_manager.cpp  ttf_manager.h  utils.hpp
src/hook/: cache.hpp  config.h  crash_report.hpp  dictionary.cpp  dictionary.h  hooks.cpp  hooks.h  keybindings.h  logger.hpp  main.cpp  patches.cpp  patches.h  pch.h  screen_manager.hpp  sdl_functions.hpp.tmp  state_manager.hpp  ttf_manager.cpp  ttf_manager.cpp.tmp  ttf_manager.h  ttf_manager.h.tmp  utils.hpp  watchdog.hpp
tools/: README.md  fn_byte_patterns.ffsess  parse_ffsess.ipynb  pyproject.toml
tools/search_offsets/: patterns.py  search.py
(+3 files in other folders)
