[tool.poetry]
name = "search-offsets"
version = "0.1.0"
description = ""
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_offsets"}]

[tool.poetry.dependencies]
python = "^3.10"
more-itertools = "^10.1.0"
typer = "^0.9.0"
peclasses = {version = "^0.4.0", source = "dfint"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.1.6"

[tool.poetry.scripts]
search = "search_offsets.search:app"

[[tool.poetry.source]]
name = "dfint"
url = "https://dfint.github.io/pypi-index/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
select = ["E", "F", "UP"]
ignore = ["UP015"]
unfixable = ["F401"]
target-version = "py310"
